Added SEO meta tags

--- a/practice-areas.html
+++ b/practice-areas.html
@@ -10,12 +10,24 @@
 
       gtag('config', 'G-0RSQRSE4QJ');
     </script>
-    <title>Entrust Legal</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+
+    <!-- SEO Meta Tags -->
+    <title>Entrust Legal - Expert Legal Services in Hyderabad | Corporate Law, White Collar Crimes, and More</title>
+    <meta name="description" content="Entrust Legal offers expert legal advice in Hyderabad, specializing in corporate law, white collar crimes, family law, and more. Contact us for a free consultation.">
+    <meta name="keywords" content="Entrust Legal, legal services Hyderabad, corporate law, white collar crimes, family law, criminal defense, experienced attorneys, free consultation">
+
+    <!-- Open Graph (OG) Tags for Social Media -->
+    <meta property="og:title" content="Entrust Legal - Expert Legal Services in Hyderabad">
+    <meta property="og:description" content="Get the expert legal advice you deserve. Our knowledgeable attorneys specialize in corporate law, white collar crimes, family law, and more.">
+    <meta property="og:image" content="https://entrust.legal/images/entrust_legal_logo.jpg">
+    <meta property="og:url" content="https://entrust.legal/practice-areas">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Entrust Legal">
 <!-- FAVICON -->
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
